<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/app_bg"
    android:gravity="center">

    <include
        layout="@layout/common_top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBgOverlay"
        android:fadingEdge="none">

        <LinearLayout
            android:layout_marginTop="35dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/app_layout_bottom_padding"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_logo"/>
            <TextView
                android:id="@+id/txtResetHeading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reset_heading"
                android:layout_gravity="center_horizontal"
                android:paddingTop="10dp"
                android:textSize="20dp"/>
            <View
                android:layout_width="110dp"
                android:layout_height="2dp"
                android:background="@color/colorHeadingUnderLine"
                android:layout_gravity="center_horizontal"
                />
            <TextView
                android:id="@+id/txtResetSub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reset_sub_head"
                android:layout_gravity="center_horizontal"
                android:paddingTop="20dp"
                android:textSize="@dimen/app_form_input_font"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                android:id="@+id/resetForm"
                android:padding="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/app_general_height"
                    android:orientation="horizontal"
                    android:background="@drawable/custom_input_background">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/reset_hint_password"
                        android:textSize="@dimen/app_form_input_font"
                        android:background="@null"
                        android:id="@+id/edtResetPassword"
                        android:inputType="textPassword"
                        android:layout_marginLeft="10dp"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_marginTop="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/app_general_height"
                    android:orientation="horizontal"
                    android:background="@drawable/custom_input_background">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/reset_hint_password_confirm"
                        android:textSize="@dimen/app_form_input_font"
                        android:background="@null"
                        android:id="@+id/edtResetConfirmPassword"
                        android:inputType="textPassword"
                        android:layout_marginLeft="10dp"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_marginTop="25dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btnResetPassSubmit"
                        android:layout_width="wrap_content"
                        android:padding="20dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/custom_button"
                        android:text="@string/reset_btn"
                        android:textColor="@android:color/white"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </ScrollView>


</LinearLayout>