<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/ic_bg">

    <include
        layout="@layout/common_top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBgOverlay"
        android:fadingEdge="none">

        <LinearLayout
            android:layout_marginTop="35dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/app_layout_bottom_padding"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_logo"/>
            <TextView
                android:id="@+id/txtRegHeading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reg_heading"
                android:layout_gravity="center_horizontal"
                android:paddingTop="10dp"
                android:textSize="20dp"/>

            <View
                android:layout_width="100dp"
                android:layout_height="2dp"
                android:background="@color/colorHeadingUnderLine"
                android:layout_gravity="center_horizontal"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:id="@+id/regForm"
                android:padding="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/app_general_height"
                    android:orientation="horizontal"
                    android:background="@drawable/custom_input_background">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/hint_first_name"
                        android:background="@null"
                        android:id="@+id/edtRegFirstName"
                        android:textSize="@dimen/app_form_input_font"
                        android:layout_marginLeft="10dp"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/app_general_height"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    android:background="@drawable/custom_input_background">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/hint_last_name"
                        android:background="@null"
                        android:id="@+id/edtRegLastName"
                        android:layout_marginLeft="10dp"
                        android:textSize="@dimen/app_form_input_font"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/app_general_height"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    android:background="@drawable/custom_input_background">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/hint_username"
                        android:background="@null"
                        android:id="@+id/edtRegUsername"
                        android:layout_marginLeft="10dp"
                        android:textSize="@dimen/app_form_input_font"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/app_general_height"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    android:background="@drawable/custom_input_background">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/hint_email"
                        android:background="@null"
                        android:inputType="textEmailAddress"
                        android:textSize="@dimen/app_form_input_font"
                        android:id="@+id/edtRegEmail"
                        android:layout_marginLeft="10dp"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/app_general_height"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    android:background="@drawable/custom_input_background">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/hint_password"
                        android:textSize="@dimen/app_form_input_font"
                        android:background="@null"
                        android:id="@+id/edtRegPassword"
                        android:inputType="textPassword"
                        android:layout_marginLeft="10dp"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/app_general_height"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    android:background="@drawable/custom_input_background">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/hint_confirm_password"
                        android:textSize="@dimen/app_form_input_font"
                        android:background="@null"
                        android:id="@+id/edtRegConfirmPassword"
                        android:inputType="textPassword"
                        android:layout_marginLeft="10dp"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btnSubmit"
                        android:layout_width="140dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/custom_button"
                        android:text="Submit"
                        android:textColor="@android:color/white"/>
                </LinearLayout>
                </LinearLayout>
        </LinearLayout>

    </ScrollView>


</LinearLayout>